[package]
name = "jandan_pic_bot"
version = "0.2.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
lazy_static = "1.4"
itertools = "0.9"
regex = "1.3"
futures = { version = "0.3", features = [] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11"
marksman_escape= "0.1"
serde = { version = "1.0", features = ["derive"] }
image = "0.23.2"

[dependencies.tbot]
version = "0.5"
default-features = false
features = ["rustls"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "gzip", "json"]
