[package]
name = "jandan_pic_bot"
version = "0.2.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
lazy_static = "1.4"
regex = "1.5"
futures = { version = "0.3", features = [] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.12"
marksman_escape= "0.1"
serde = { version = "1.0", features = ["derive"] }
image = "0.23.14"
rsmpeg = { version = "0.14.2", features = ["link_system_ffmpeg"] }

[dependencies.tbot]
version = "0.6"
default-features = false
features = ["rustls"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "gzip", "json"]
