[package]
name = "jandan_pic_bot"
version = "0.2.0"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
regex = "1.5"
futures = { version = "0.3", features = [] }
tokio = { version = "1", features = ["full"] }
scraper = "0.26"
marksman_escape= "0.1"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"
rsmpeg = { version = "0.18", git = "https://github.com/iovxw/rsmpeg.git", branch="tmp", default-features = false, features = ["ffmpeg6", "link_system_ffmpeg"] }
serde_json = "1"
teloxide = { version = "0.17", default-features = false, features = ["rustls"] }

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "gzip", "json"]
